fix header rendering incorrectly on ios

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,6 @@
 header {
   height: 60px;
   width: 100%;
-  margin: 0 auto;
   text-align: center;
   display: flex;
   flex-direction: row;
